--- a/genres/genres.html
+++ b/genres/genres.html
@@ -127,25 +127,28 @@
                     <!-- REMAINING PAGE CONTENT GOES INSIDE COL-10 -->
                     <div class="col-10">
 
-                        <div class="row">
+                        <div class="row ml-4">
                             <!-- FRANCESCO CODE GOES HERE -->
-                            <div class="col-12 mt-5">
+                            <div class="col-12 mt-5 border-bottom border-secondary">
                                 <h3>Genres page</h3>
                             </div>
-
-                            <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Rock</button>
-                            <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Trap</button>
-                            <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">R&B</button>
-                            <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Jazz</button>
-                            <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Modern Rock</button>
-                            <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Classical</button>
-                            <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Fusion</button>
-                            <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Rap</button>
-                            <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Pop</button>
-                            <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Country</button>
+                            <div class="col-12 text-center">
+                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Rock</button>
+                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Trap</button>
+                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">R&B</button>
+                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Jazz</button>
+                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Modern Rock</button>
+                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Classical</button>
+                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Fusion</button>
+                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Rap</button>
+                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Pop</button>
+                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Country</button>
+                                <div class="col-12 border-bottom border-secondary"></div>
+                            </div>
 
 
                         </div>
+
 
                     </div>
 
