--- a/genres/genres.html
+++ b/genres/genres.html
@@ -421,7 +421,7 @@
                             </div>
                             <!-- END UNDERGROUND SECTION -->
                             <h3 class="styleTitle">R&B</h3>
-                            <div class="d-flex col-12 bg-success py-3">
+                            <div class="d-flex col-12 bg-success py-3 displaynone">
 
 
                                 <div class="d-flex flex-wrap mt-5">
@@ -558,7 +558,7 @@
                             <div class="d-flex col-12 bg-success py-3">
 
 
-                                <div class="d-flex flex-wrap mt-5">
+                                <div class="d-flex flex-wrap mt-5 displaynone">
                                     <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
