--- a/albums/albums.html
+++ b/albums/albums.html
@@ -57,23 +57,25 @@
                             </a> 
                             
                             <hr class="border-secondary">
-                            <p>Funky Heavy Bluesy</p>
-                            <p>Your Top songs 2020</p>
-                            <p>In Love With You-Erykah B..</p>
-                            <p>This is road Stewart</p>
-                            <p>FRANCHISE ft.Young Thig...</p>
-                            <p>Your Top Songs 2019</p>
-                            <p>Pallegio</p>
-                            <p>This is Joe Bonamassa</p>
-                            <p>June 2019</p>
-                            <p>Jack 30th Party 2<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
-                            <p>Jack 30th Party<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
-                            <p>This is Opeth</p>
-                            <p>Metal Ballades</p>
-                            <p>New Playlist</p>
-                            <p>Your Top Songs 2018</p>
-                            <p>Jazz Classics Blue Note...</p>
-                            <p class="text-muted"><i class="bi bi-arrow-down-circle"> </i>Install app</p>
+                            <div class="other-links">
+                                <p>Funky Heavy Bluesy</p>
+                                <p>Your Top songs 2020</p>
+                                <p>In Love With You-Erykah B..</p>
+                                <p>This is road Stewart</p>
+                                <p>FRANCHISE ft.Young Thig...</p>
+                                <p>Your Top Songs 2019</p>
+                                <p>Pallegio</p>
+                                <p>This is Joe Bonamassa</p>
+                                <p>June 2019</p>
+                                <p>Jack 30th Party 2<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
+                                <p>Jack 30th Party<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
+                                <p>This is Opeth</p>
+                                <p>Metal Ballades</p>
+                                <p>New Playlist</p>
+                                <p>Your Top Songs 2018</p>
+                                <p>Jazz Classics Blue Note...</p>
+                                <p class="text-muted"><i class="bi bi-arrow-down-circle"> </i>Install app</p>
+                            </div>
                         </div>
                     </div>
                 </div>
