--- a/favourites/favourites.html
+++ b/favourites/favourites.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 <link rel="stylesheet" href="../style.css">
-<link rel="stylesheet" href="genres.css">
+<link rel="stylesheet" href="favourites.css">
 
 </head>
 <body>
@@ -128,11 +128,7 @@
                    <div class="col-10">
 
                        <div class="row">
-                           <!-- FRANCESCO CODE GOES HERE -->
-                       </div>
-
-                       <div class="row">
-                        <!-- FRANCESCO CODE GOES HERE -->
+                        <!-- JAVOKHIR CODE GOES HERE -->
                     </div>
 
                    </div>
@@ -150,6 +146,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 <script src="../script.js"></script>
-<script src="genres.js"></script>
+<script src="favourites.js"></script>
 </body>
 </html>
