--- a/index.html
+++ b/index.html
@@ -58,23 +58,25 @@
                             <button class="btn btn-dark" id="toggle-theme">Toggle Theme</button>
 
                             <hr class="border-secondary">
-                            <p>Funky Heavy Bluesy</p>
-                            <p>Your Top songs 2020</p>
-                            <p>In Love With You-Erykah B..</p>
-                            <p>This is road Stewart</p>
-                            <p>FRANCHISE ft.Young Thig...</p>
-                            <p>Your Top Songs 2019</p>
-                            <p>Pallegio</p>
-                            <p>This is Joe Bonamassa</p>
-                            <p>June 2019</p>
-                            <p>Jack 30th Party 2<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
-                            <p>Jack 30th Party<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
-                            <p>This is Opeth</p>
-                            <p>Metal Ballades</p>
-                            <p>New Playlist</p>
-                            <p>Your Top Songs 2018</p>
-                            <p>Jazz Classics Blue Note...</p>
-                            <p class="text-muted"><i class="bi bi-arrow-down-circle"> </i>Install app</p>
+                            <div class="other-links">
+                                <p>Funky Heavy Bluesy</p>
+                                <p>Your Top songs 2020</p>
+                                <p>In Love With You-Erykah B..</p>
+                                <p>This is road Stewart</p>
+                                <p>FRANCHISE ft.Young Thig...</p>
+                                <p>Your Top Songs 2019</p>
+                                <p>Pallegio</p>
+                                <p>This is Joe Bonamassa</p>
+                                <p>June 2019</p>
+                                <p>Jack 30th Party 2<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
+                                <p>Jack 30th Party<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
+                                <p>This is Opeth</p>
+                                <p>Metal Ballades</p>
+                                <p>New Playlist</p>
+                                <p>Your Top Songs 2018</p>
+                                <p>Jazz Classics Blue Note...</p>
+                                <p class="text-muted"><i class="bi bi-arrow-down-circle"> </i>Install app</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -364,20 +366,53 @@
         <!-- MUSIC CONTROLS FOOTER -->
         <div class="row music-controls">
 
-            <div class="col-12 col-lg-4">
+            <div class="col-10 col-lg-4">
                 
                 <div class="song-info-footer d-flex justify-content-center justify-content-lg-start">
                     <img class="d-none d-xl-block" src="./assets/cards/9.jpg" alt="">
                     <div class="d-flex flex-column">
                         <p class="ml-3 mb-0 font-weight-bold">Another One Bites The Dust - Remastered 2011</p>
-                        <p class="ml-3 light-gray-text smaller-text">Queen</p>
+                        <p class="ml-3 light-gray-text smaller-text mb-0">Queen</p>
                     </div>
                     <i class="bi bi-heart ml-2"></i>
                 </div>
 
             </div>
 
-            <div class="col-12 col-lg-4 d-flex flex-column align-items-center">
+            <div class="col-2 d-lg-none">
+                <i class="bi bi-play-circle-fill"></i>
+            </div>
+
+            <div class="col-3 d-lg-none nav-bar">
+                <a href="index.html" class="d-flex selected flex-column justify-content-center align-items-center py-2">
+                    <i class="bi bi-house-door mx-3"></i>
+                    <p class="d-none d-sm-block mb-0">Home</p>
+                </a> 
+            </div>
+
+            <div class="col-3 d-lg-none nav-bar">
+                <a href="#" class="d-flex flex-column justify-content-center align-items-center py-2">
+                    <i class="bi bi-collection-play mx-3"></i>
+                    <p class="d-none d-sm-block mb-0">Your Library</p>
+                </a> 
+            </div>
+
+            <div class="col-3 d-lg-none nav-bar">
+                <a href="./albums/albums.html" class="d-flex flex-column justify-content-center align-items-center py-2">
+                    <i class="bi bi-vinyl mx-3"></i>
+                    <p class="d-none d-sm-block mb-0">Albums</p>
+                </a> 
+            </div>
+
+            <div class="col-3 d-lg-none nav-bar">
+                <a href="./artists/artists.html" class="d-flex flex-column justify-content-center align-items-center py-2">
+                    <i class="bi bi-music-note-beamed mx-3"></i>
+                    <p class="d-none d-sm-block mb-0">Artists</p>
+                </a>
+            </div>
+
+
+            <div class="col-12 col-lg-4 d-none d-lg-flex flex-column align-items-center">
                 <div class="music-controls-section d-flex align-items-center">
                     <i class="bi bi-shuffle mx-3 light-gray-text"></i>
                     <i class="bi bi-skip-backward-fill mx-3 light-gray-text"></i>
