--- a/genres/genres.html
+++ b/genres/genres.html
@@ -132,17 +132,17 @@
                             <div class="col-12 mt-5 border-bottom border-secondary">
                                 <h3>Genres page</h3>
                             </div>
-                            <div class="col-12 text-center">
-                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Rock</button>
-                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Underground</button>
-                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">R&B</button>
-                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Jazz</button>
-                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Modern Rock</button>
-                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Classical</button>
-                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Fusion</button>
-                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Rap</button>
-                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Pop</button>
-                                <button type="button" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Country</button>
+                            <div class="col-12 text-center showList">
+                                <button type="button" id="rock" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Rock</button>
+                                <button type="button" id="underground" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Underground</button>
+                                <button type="button" id="r&b" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">R&B</button>
+                                <button type="button" id="jazz" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Jazz</button>
+                                <button type="button" id="modern" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Modern Rock</button>
+                                <button type="button" id="classical" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Classical</button>
+                                <button type="button" id="fusion" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Fusion</button>
+                                <button type="button" id="rap" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Rap</button>
+                                <button type="button" id="pop" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Pop</button>
+                                <button type="button" id="country" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Country</button>
                                 <div class="col-12 border-bottom border-secondary"></div>
                             </div>
 
@@ -152,18 +152,18 @@
                         <div class="row mt-5 mx-4">
                             <!-- FRANCESCO CODE GOES HERE -->
 
-                            <h3 class="styleTitle">ROCK</h3>
-                            <div class="d-flex col-12 bg-success py-3">
+                            <h3 class="styleTitle ">ROCK</h3>
+                            <div class="d-flex col-12 py-3">
 
 
-                                <div class="d-flex flex-wrap mt-5">
+                                <div class="d-flex flex-wrap mt-5 displaynone" id="rockStyle">
                                     <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Card title</h5>
+                                                <h5 class="hp-card-title">Rock</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -287,7 +287,7 @@
                             </div>
                             <!-- END ROCK SECTION -->
                             <h3 class="styleTitle">UNDERGROUND</h3>
-                            <div class="d-flex col-12 bg-success py-3 displaynone">
+                            <div class="d-flex col-12 bg-success py-3 displaynone" id="undergroundStyle">
 
 
                                 <div class="d-flex flex-wrap mt-5">
@@ -421,7 +421,7 @@
                             </div>
                             <!-- END UNDERGROUND SECTION -->
                             <h3 class="styleTitle">R&B</h3>
-                            <div class="d-flex col-12 bg-success py-3 displaynone">
+                            <div class="d-flex col-12 bg-success py-3 displaynone" id="r&bStyle">
 
 
                                 <div class="d-flex flex-wrap mt-5">
@@ -431,7 +431,7 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Card title</h5>
+                                                <h5 class="hp-card-title">R&B</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -558,14 +558,14 @@
                             <div class="d-flex col-12 bg-success py-3">
 
 
-                                <div class="d-flex flex-wrap mt-5 displaynone">
+                                <div class="d-flex flex-wrap mt-5 displaynone" id="jazzStyle">
                                     <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Card title</h5>
+                                                <h5 class="hp-card-title">Jazz</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -709,12 +709,12 @@
 
 
 
-    </div>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="../script.js"></script>
-    <script src="genres.js"></script>
+    <script src="genres.js" defer></script>
 </body>
 
 </html>
