changing home-[age to a light mode

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="col-2 d-none d-xl-block">
                     <div class="row">
                         <div class="side-bar col-12 px-0">
-                            <a href="index.html"><img class="spotify-logo" src="../assets/spotlogo.jpg" alt="sidebar-logo"></a>
+                            <a href="index.html"><img class="spotify-logo mt-0" src="../assets/spotify-logo.png" alt="sidebar-logo"></a>
                             
                             <a href="index.html" class="d-flex selected py-2">
                                 <i class="bi bi-house-door mx-3"></i>
@@ -75,7 +75,7 @@
                                 <p>New Playlist</p>
                                 <p>Your Top Songs 2018</p>
                                 <p>Jazz Classics Blue Note...</p>
-                                <p class="text-muted"><i class="bi bi-arrow-down-circle"> </i>Install app</p>
+                                <p class="light-gray-text"><i class="bi bi-arrow-down-circle"> </i>Install app</p>
                             </div>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
 
                             <div class="d-flex justify-content-between mt-4 mb-3">
                                 <h4>Recently played</h4>
-                                <p class="hp-tag text-muted font-weight-bold">SEE ALL</p>
+                                <p class="hp-tag light-gray-text font-weight-bold">SEE ALL</p>
                             </div>
 
 
@@ -257,7 +257,7 @@
 
                             <div class="d-flex justify-content-between mt-4 mb-3">
                                 <h4>Shows to try</h4>
-                                <p class="hp-tag text-muted font-weight-bold">SEE ALL</p>
+                                <p class="hp-tag light-gray-text font-weight-bold">SEE ALL</p>
                             </div>
 
 
@@ -340,7 +340,7 @@
 
                             <div class="d-flex justify-content-between mt-4 mb-3">
                                 <h4>More of what you like</h4>
-                                <p class="hp-tag text-muted font-weight-bold">SEE ALL</p>
+                                <p class="hp-tag light-gray-text font-weight-bold">SEE ALL</p>
                             </div>
 
 
@@ -423,7 +423,7 @@
 
                             <div class="d-flex justify-content-between mt-4 mb-3">
                                 <h4>Hits</h4>
-                                <p class="hp-tag text-muted font-weight-bold">SEE ALL</p>
+                                <p class="hp-tag light-gray-text font-weight-bold">SEE ALL</p>
                             </div>
 
 
@@ -506,7 +506,7 @@
 
                             <div class="d-flex justify-content-between mt-4 mb-3">
                                 <h4>The best of 2020</h4>
-                                <p class="hp-tag text-muted font-weight-bold">SEE ALL</p>
+                                <p class="hp-tag light-gray-text font-weight-bold">SEE ALL</p>
                             </div>
 
 
@@ -589,7 +589,7 @@
 
                             <div class="d-flex justify-content-between mt-4 mb-3">
                                 <h4>Jump back in</h4>
-                                <p class="hp-tag text-muted font-weight-bold">SEE ALL</p>
+                                <p class="hp-tag light-gray-text font-weight-bold">SEE ALL</p>
                             </div>
 
 
@@ -672,7 +672,7 @@
 
                             <div class="d-flex justify-content-between mt-4 mb-3">
                                 <h4>For funs of Sanah</h4>
-                                <p class="hp-tag text-muted font-weight-bold">SEE ALL</p>
+                                <p class="hp-tag light-gray-text font-weight-bold">SEE ALL</p>
                             </div>
 
 
