--- a/profile/profile.html
+++ b/profile/profile.html
@@ -129,11 +129,12 @@
                     
                             <div class="col-10 d-flex flex-row">
 
-                                <div class="col-2">
-                                <img src="../assets/profile.jpg.jpg" class="rounded-circle profile-picture img-fluid" alt="">
+                                <div class="col-3">
+                                <h1 class="text-muted"><strong>Account info</strong></h1>
+                                <img src="../assets/profile.jpg.jpg" class="rounded-circle profile-picture img-fluid" alt="profile-photo">
                                 </div>
                                 <div class="label-name col-3 d-flex flex-column">
-                                <label for="name" class="text-info">Name:</label>
+                                <label for="name" class="text-info"><strong>Name:</strong></label>
                                 <p class="name text-info">Ali</p>
                                 <div class="text-label" ></div>
                                 <div class="input-group flex-nowrap">
@@ -142,7 +143,7 @@
                                     <input type="text" class="form-control rounded-pill" placeholder="Enter your name" aria-label="name" aria-describedby="addon-wrapping" required>
                                 </div>
                                 <button type="button" class="edit-info btn btn-success rounded-pill" onclick="changeName(event)">Edit name</button>
-                                <label for="password" class="mt-5 text-info">Password: </label>
+                                <label for="password" class="mt-5 text-info"><strong>Password:</strong></label>
                                 <p class="password text-info">*********</p>
                                 <div class="input-group flex-nowrap">
                                     <div class="input-group-prepend">
@@ -152,7 +153,7 @@
                                 <button type="button" class="mt-2 edit-info btn btn-success rounded-pill" onclick="changePassword(event)">Edit password</button>
                                 </div>
                                 <div class="label-name col-3 d-flex flex-column">
-                                <label for="email" class="text-info">Email:</label>
+                                <label for="email" class="text-info"><strong>Email:</strong></label>
                                 <p class="email text-info">James1999007@gmail.com</p>
                                 <div class="input-group flex-nowrap">
                                     <div class="input-group-prepend">
@@ -160,7 +161,7 @@
                                     <input type="email" class="form-control form3 rounded-pill" placeholder="Enter your email" aria-label="email" aria-describedby="addon-wrapping" required/>
                                 </div>
                                 <button type="button" class="edit-info btn btn-success rounded-pill" onclick="changeEmail(event)">Edit email</button>
-                                <label for="age" class="mt-5 text-info">Age:</label>
+                                <label for="age" class="mt-5 text-info"><strong>Age:</strong></label>
                                 <p class="age text-info">22</p>
                                 <div class="input-group flex-nowrap">
                                     <div class="input-group-prepend">
