Added Sidebark links and icons

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 <p>Create Playlist</p>
                             </a> 
 
-                            <a href="#" class="d-flex py-2">
+                            <a href="./favourites/favourites.html" class="d-flex py-2">
                                 <i class="bi bi-heart-fill mx-3"></i>
                                 <p>Liked Songs</p>
                             </a> 
@@ -113,7 +113,7 @@
                                 <p class="mx-0">Create Playlist</p>
                             </a> 
 
-                            <a href="#" class="d-flex flex-column py-2 align-items-center justify-content-center">
+                            <a href="./favourites/favourites.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
                                 <i class="bi bi-heart-fill"></i>
                                 <p class="mx-0">Liked Songs</p>
                             </a> 
