--- a/genres/genres.html
+++ b/genres/genres.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="genres.css">
+    <link rel = "icon" type = "image/png" href = "/assets/iconspoti.png">
+
 
 </head>
 
@@ -52,7 +54,7 @@
                                     <p>Create Playlist</p>
                                 </a>
 
-                                <a href="#" class="d-flex py-2">
+                                <a href="../favourites/favourites.html" class="d-flex py-2">
                                     <i class="bi bi-heart-fill mx-3"></i>
                                     <p>Liked Songs</p>
                                 </a>
@@ -112,7 +114,7 @@
                                     <p class="mx-0">Create Playlist</p>
                                 </a>
 
-                                <a href="#" class="d-flex flex-column py-2 align-items-center justify-content-center">
+                                <a href="../favourites/favourites.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
                                     <i class="bi bi-heart-fill"></i>
                                     <p class="mx-0">Liked Songs</p>
                                 </a>
