Loading homepage from js

--- a/favourites/favourites.html
+++ b/favourites/favourites.html
@@ -32,7 +32,7 @@
                                 <p>Home</p>
                             </a> 
                             
-                            <a href="#" class="d-flex py-2">
+                            <a href="../genres/genres.html" class="d-flex py-2">
                                 <i class="bi bi-collection-play mx-3"></i>
                                 <p>Your Library</p>
                             </a> 
@@ -42,7 +42,7 @@
                                 <p>Albums</p>
                             </a> 
 
-                            <a href="./artists.html" class="d-flex py-2 selected">
+                            <a href="./artists.html" class="d-flex py-2">
                                 <i class="bi bi-music-note-beamed mx-3"></i>
                                 <p>Artists</p>
                             </a> 
@@ -52,7 +52,7 @@
                                 <p>Create Playlist</p>
                             </a> 
 
-                            <a href="../favourites/favourites.html" class="d-flex py-2">
+                            <a href="../favourites/favourites.html" class="d-flex py-2 selected">
                                 <i class="bi bi-heart-fill mx-3"></i>
                                 <p>Liked Songs</p>
                             </a> 
@@ -94,7 +94,7 @@
                                 <p class="mx-0">Home</p>
                             </a> 
                             
-                            <a href="#" class="d-flex flex-column py-2 align-items-center justify-content-center">
+                            <a href="../genres/genres.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
                                 <i class="bi bi-collection-play"></i>
                                 <p class="mx-0">Your Library</p>
                             </a> 
@@ -104,7 +104,7 @@
                                 <p class="mx-0">Albums</p>
                             </a> 
 
-                            <a href="./artists.html" class="d-flex flex-column py-2 align-items-center justify-content-center selected">
+                            <a href="./artists.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
                                 <i class="bi bi-music-note-beamed"></i>
                                 <p class="mx-0">Artists</p>
                             </a> 
@@ -114,7 +114,7 @@
                                 <p class="mx-0">Create Playlist</p>
                             </a> 
 
-                            <a href="../favourites/favourites.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
+                            <a href="../favourites/favourites.html" class="d-flex flex-column py-2 align-items-center justify-content-center selected">
                                 <i class="bi bi-heart-fill"></i>
                                 <p class="mx-0">Liked Songs</p>
                             </a> 
