--- a/genres/genres.html
+++ b/genres/genres.html
@@ -34,7 +34,7 @@
                                     <p>Home</p>
                                 </a>
 
-                                <a href="#" class="d-flex py-2">
+                                <a href="./genres.html" class="d-flex py-2 selected">
                                     <i class="bi bi-collection-play mx-3"></i>
                                     <p>Your Library</p>
                                 </a>
@@ -44,7 +44,7 @@
                                     <p>Albums</p>
                                 </a>
 
-                                <a href="./artists.html" class="d-flex py-2 selected">
+                                <a href="./artists.html" class="d-flex py-2">
                                     <i class="bi bi-music-note-beamed mx-3"></i>
                                     <p>Artists</p>
                                 </a>
@@ -60,23 +60,25 @@
                                 </a>
 
                                 <hr class="border-secondary">
-                                <p>Funky Heavy Bluesy</p>
-                                <p>Your Top songs 2020</p>
-                                <p>In Love With You-Erykah B..</p>
-                                <p>This is road Stewart</p>
-                                <p>FRANCHISE ft.Young Thig...</p>
-                                <p>Your Top Songs 2019</p>
-                                <p>Pallegio</p>
-                                <p>This is Joe Bonamassa</p>
-                                <p>June 2019</p>
-                                <p>Jack 30th Party 2<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
-                                <p>Jack 30th Party<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
-                                <p>This is Opeth</p>
-                                <p>Metal Ballades</p>
-                                <p>New Playlist</p>
-                                <p>Your Top Songs 2018</p>
-                                <p>Jazz Classics Blue Note...</p>
-                                <p class="text-muted"><i class="bi bi-arrow-down-circle"> </i>Install app</p>
+                                <div class="other-links">
+                                    <p>Funky Heavy Bluesy</p>
+                                    <p>Your Top songs 2020</p>
+                                    <p>In Love With You-Erykah B..</p>
+                                    <p>This is road Stewart</p>
+                                    <p>FRANCHISE ft.Young Thig...</p>
+                                    <p>Your Top Songs 2019</p>
+                                    <p>Pallegio</p>
+                                    <p>This is Joe Bonamassa</p>
+                                    <p>June 2019</p>
+                                    <p>Jack 30th Party 2<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
+                                    <p>Jack 30th Party<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
+                                    <p>This is Opeth</p>
+                                    <p>Metal Ballades</p>
+                                    <p>New Playlist</p>
+                                    <p>Your Top Songs 2018</p>
+                                    <p>Jazz Classics Blue Note...</p>
+                                    <p class="text-muted"><i class="bi bi-arrow-down-circle"> </i>Install app</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -94,7 +96,7 @@
                                     <p class="mx-0">Home</p>
                                 </a>
 
-                                <a href="#" class="d-flex flex-column py-2 align-items-center justify-content-center">
+                                <a href="./genres.html" class="d-flex flex-column py-2 align-items-center justify-content-center selected">
                                     <i class="bi bi-collection-play"></i>
                                     <p class="mx-0">Your Library</p>
                                 </a>
@@ -104,7 +106,7 @@
                                     <p class="mx-0">Albums</p>
                                 </a>
 
-                                <a href="./artists.html" class="d-flex flex-column py-2 align-items-center justify-content-center selected">
+                                <a href="./artists.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
                                     <i class="bi bi-music-note-beamed"></i>
                                     <p class="mx-0">Artists</p>
                                 </a>
