--- a/albums/albums.html
+++ b/albums/albums.html
@@ -34,7 +34,7 @@
                                 <p>Home</p>
                             </a> 
                             
-                            <a href="#" class="d-flex py-2">
+                            <a href="../genres/genres.html" class="d-flex py-2">
                                 <i class="bi bi-collection-play mx-3"></i>
                                 <p>Your Library</p>
                             </a> 
@@ -96,12 +96,12 @@
                                 <p class="mx-0">Home</p>
                             </a> 
                             
-                            <a href="#" class="d-flex flex-column py-2 align-items-center justify-content-center">
+                            <a href="../genres/genres.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
                                 <i class="bi bi-collection-play"></i>
                                 <p class="mx-0">Your Library</p>
                             </a> 
 
-                            <a href="..html" class="d-flex flex-column py-2 align-items-center justify-content-center selected">
+                            <a href="./albums.html" class="d-flex flex-column py-2 align-items-center justify-content-center selected">
                                 <i class="bi bi-vinyl"></i>
                                 <p class="mx-0">Albums</p>
                             </a> 
