Add sidebar links in homepage

--- a/albums/albums.html
+++ b/albums/albums.html
@@ -26,7 +26,7 @@
                 <div class="col-2 d-none d-xl-block">
                     <div class="row">
                         <div class="side-bar col-12 px-0">
-                            <a href="../index.html"><img class="spotify-logo" src="../assets/spotlogo.jpg" alt="sidebar-logo"></a>
+                            <a href="index.html"><img class="spotify-logo mt-0" src="../assets/spotify-logo.png" alt="sidebar-logo"></a>
 
                             
                             <a href="../index.html" class="d-flex py-2">
@@ -89,7 +89,7 @@
                 <div class="col-2 d-none d-lg-block d-xl-none">
                     <div class="row">
                         <div class="side-bar col-12 text-light px-0">
-                            <a href="../index.html"><img class="spotify-logo" src="../assets/spotlogo.jpg" alt="sidebar-logo"></a>
+                            <a href="index.html"><img class="spotify-logo mt-0" src="../assets/spotify-logo.png" alt="sidebar-logo"></a>
                             
                             <a href="../index.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
                                 <i class="bi bi-house-door"></i>
@@ -130,7 +130,7 @@
 
 
                 <!-- REMAINING PAGE CONTENT GOES INSIDE COL-10 -->
-                <div class="col-12 col-lg-10 p-0">
+                <div class="col-12 col-lg-10 main-page-content px-0">
 
                      <!-- Album header -->
                      <div id="album-header-container">
