--- a/index.html
+++ b/index.html
@@ -57,24 +57,23 @@
                             </a> 
 
                             <hr class="border-secondary">
-                            <div class="other-links">
+                            <div class="other-links d-flex flex-column">
                                 <a href="#good-morning-h3">Good Morning</a>
-                                <p>Your Top songs 2020</p>
-                                <p>In Love With You-Erykah B..</p>
-                                <p>This is road Stewart</p>
-                                <p>FRANCHISE ft.Young Thig...</p>
-                                <p>Your Top Songs 2019</p>
-                                <p>Pallegio</p>
-                                <p>This is Joe Bonamassa</p>
-                                <p>June 2019</p>
-                                <p>Jack 30th Party 2<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
-                                <p>Jack 30th Party<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
-                                <p>This is Opeth</p>
-                                <p>Metal Ballades</p>
-                                <p>New Playlist</p>
-                                <p>Your Top Songs 2018</p>
-                                <p>Jazz Classics Blue Note...</p>
-                                <p class="light-gray-text"><i class="bi bi-arrow-down-circle"> </i>Install app</p>
+                                <a href="#recently-played-h4">Recently Played</a>
+                                <a href="#shows-to-try-h4">Shows To Try</a>
+                                <a href="#more-of-what-you-like-h4">More Of What You Like</a>
+                                <a href="#hits-h4">Hits</a>
+                                <a href="#the-best-of-2020-h4">The Best of 2020</a>
+                                <a href="#jump-back-in-h4">Jump Back In</a>
+                                <a href="#for-fans-of-sanah-h4">For Fans Of Sanah</a>
+                                <a href="#">Your Top songs 2020</a>
+                                <a href="#">In Love With You-Erykah B..</a>
+                                <a href="#">FRANCHISE ft.Young Thig...</a>
+                                <a href="#">This is road Stewart</a>
+                                <a href="#">Your Top Songs 2019</a>
+                                <a href="#">Metal Ballades</a>
+                                <a href="#">Jazz Classics Blue Note...</a>
+                                <a href="#" class="light-gray-text"><i class="bi bi-arrow-down-circle"> </i>Install app</a>
                             </div>
                         </div>
                     </div>
@@ -126,7 +125,7 @@
 
 
                 <!-- MAIN PAGE CONTENT  -->
-                <div class="col-12 col-lg-10">
+                <div class="col-12 col-lg-10 main-page-content">
 
                     <div class="row">
                         <div class="col-12 hp-hero pt-2">
