--- a/favourites/favourites.html
+++ b/favourites/favourites.html
@@ -25,7 +25,7 @@
                   <div class="col-2 d-none d-xl-block">
                     <div class="row">
                         <div class="side-bar col-12 px-0">
-                            <a href="../index.html"><img class="spotify-logo" src="../assets/spotlogo.jpg" alt="sidebar-logo"></a>
+                            <a href="index.html"><img class="spotify-logo mt-0" src="../assets/spotify-logo.png" alt="sidebar-logo"></a>
                             
                             <a href="../index.html" class="d-flex py-2">
                                 <i class="bi bi-house-door mx-3"></i>
@@ -42,7 +42,7 @@
                                 <p>Albums</p>
                             </a> 
 
-                            <a href="./artists.html" class="d-flex py-2">
+                            <a href="../artists/artists.html" class="d-flex py-2">
                                 <i class="bi bi-music-note-beamed mx-3"></i>
                                 <p>Artists</p>
                             </a> 
@@ -52,7 +52,7 @@
                                 <p>Create Playlist</p>
                             </a> 
 
-                            <a href="../favourites/favourites.html" class="d-flex py-2 selected">
+                            <a href="./favourites.html" class="d-flex py-2 selected">
                                 <i class="bi bi-heart-fill mx-3"></i>
                                 <p>Liked Songs</p>
                             </a> 
@@ -87,7 +87,7 @@
                 <div class="col-2 d-none d-lg-block d-xl-none">
                     <div class="row">
                         <div class="side-bar col-12 text-light px-0">
-                            <a href="../index.html"><img class="spotify-logo" src="../assets/spotlogo.jpg" alt="sidebar-logo"></a>
+                            <a href="index.html"><img class="spotify-logo mt-0" src="../assets/spotify-logo.png" alt="sidebar-logo"></a>
                             
                             <a href="../index.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
                                 <i class="bi bi-house-door"></i>
@@ -104,7 +104,7 @@
                                 <p class="mx-0">Albums</p>
                             </a> 
 
-                            <a href="./artists.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
+                            <a href="../artists/artists.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
                                 <i class="bi bi-music-note-beamed"></i>
                                 <p class="mx-0">Artists</p>
                             </a> 
@@ -114,7 +114,7 @@
                                 <p class="mx-0">Create Playlist</p>
                             </a> 
 
-                            <a href="../favourites/favourites.html" class="d-flex flex-column py-2 align-items-center justify-content-center selected">
+                            <a href="./favourites.html" class="d-flex flex-column py-2 align-items-center justify-content-center selected">
                                 <i class="bi bi-heart-fill"></i>
                                 <p class="mx-0">Liked Songs</p>
                             </a> 
