heart function on first song

--- a/genres/genres.html
+++ b/genres/genres.html
@@ -165,6 +165,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">Deep Purple</h5>
                                                 <p>Made in Japan</p>
+                                                <i class="bi bi-heart firstHeart" id="firstHeart"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -176,6 +177,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">Doors</h5>
                                                 <p>The Doors</p>
+                                                <i class="bi bi-heart"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -187,6 +189,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">Led Zeppelin</h5>
                                                 <p>Led Zeppelin IV</p>
+                                                <i class="bi bi-heart"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -198,6 +201,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">The Who</h5>
                                                 <p>Who's Next</p>
+                                                <i class="bi bi-heart"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -209,6 +213,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">Rolling Stones</h5>
                                                 <p>Flowers</p>
+                                                <i class="bi bi-heart"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -220,6 +225,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">Pink Floyd</h5>
                                                 <p>Atom Heart Mother</p>
+                                                <i class="bi bi-heart"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -231,6 +237,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">The Clash</h5>
                                                 <p>The Clash</p>
+                                                <i class="bi bi-heart"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -242,6 +249,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">The Police</h5>
                                                 <p>Reggatta de Blanc</p>
+                                                <i class="bi bi-heart"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -253,6 +261,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">David Bowie</h5>
                                                 <p>Space Oddity</p>
+                                                <i class="bi bi-heart"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -264,6 +273,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">Janis Joplin</h5>
                                                 <p>Live in Honolulu</p>
+                                                <i class="bi bi-heart"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -275,6 +285,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">MFSB</h5>
                                                 <p>Love is the message</p>
+                                                <i class="bi bi-heart"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -286,6 +297,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">Jimi Hendrix</h5>
                                                 <p>Are you experienced</p>
+                                                <i class="bi bi-heart"></i>
                                             </div>
                                         </div>
                                     </div>
