--- a/genres/genres.html
+++ b/genres/genres.html
@@ -169,7 +169,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">Deep Purple</h5>
                                                 <p>Made in Japan</p>
-                                                <i class="bi bi-heart firstHeart" id="firstHeart"></i>
+                                                <i class="bi bi-heart " id="firstHeart"></i>
                                             </div>
                                         </div>
                                     </div>
