--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <div class="row" id="recentlyplayed">
                         <div class="col-12 hp-sub-hero">
 
-                            <div class="d-flex justify-content-between mt-4 mb-3">
+                            <div class="d-flex justify-content-between mt-4 mb-3 mx-0">
                                 <h4 id="recently-played-h4">Recently played</h4>
                                 <p class="hp-tag light-gray-text font-weight-bold">SEE ALL</p>
                             </div>
